--- a/public/html/home.html
+++ b/public/html/home.html
@@ -177,16 +177,16 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="/vendor/MyResume/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/vendor/MyResume/assets/vendor/php-email-form/validate.js"></script>
-  <script src="/vendor/MyResume/assets/vendor/aos/aos.js"></script>
-  <script src="/vendor/MyResume/assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="/vendor/MyResume/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="/vendor/MyResume/assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="/vendor/MyResume/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/vendor/MyResume/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="/vendor/MyResume/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/vendor/MyResume/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script type="text/javascript" src="/vendor/MyResume/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="/vendor/MyResume/assets/vendor/php-email-form/validate.js"></script>
+  <script type="text/javascript" src="/vendor/MyResume/assets/vendor/aos/aos.js"></script>
+  <script type="text/javascript" src="/vendor/MyResume/assets/vendor/typed.js/typed.umd.js"></script>
+  <script type="text/javascript" src="/vendor/MyResume/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script type="text/javascript" src="/vendor/MyResume/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script type="text/javascript" src="/vendor/MyResume/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script type="text/javascript" src="/vendor/MyResume/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script type="text/javascript" src="/vendor/MyResume/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script type="text/javascript" src="/vendor/MyResume/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
   <script type="text/javascript" src="/vendor/MyResume/assets/js/main.js"></script>
